# BookTrack

./: .gitignore  .gitmodules  Makefile  README.md  color-palettes.md  future_functionality.md  next.config.js  package.json  py_requirements.txt  splashscreen.html  tsconfig.json
guides/: Download_Your_Database.md  Manage_Your_Database.md  Manage_a_List.md  Managing_a_Book.md  Setup.md  Upgrade.md
public/: splashscreen.html
src/: AddModal.jsx  App.jsx  BookCard.jsx  Header.jsx  styles.css
src-tauri/: Cargo.toml  author_vectorizer.joblib  lib.py  nb_model.joblib  synopsis_vectorizer.joblib  tauri.conf.json  title_vectorizer.joblib
src-tauri/book-api/: Cargo.toml
src-tauri/book-api/src/: book.rs  comic.rs  lib.rs
src-tauri/book_api/: Cargo.toml
src-tauri/book_api/src/: main.rs
src-tauri/src/: config.rs  main.rs  ml.rs
src/app/: footer.tsx  globals.css  greet.tsx  header.tsx  layout.tsx  page.module.css  page.tsx
src/app/add-list/: page.tsx
src/app/components/: book.tsx  footer.tsx  header.tsx  providers.tsx
src/app/components/authentication/: signin.tsx  signup.tsx
src/app/context/: UserContext.ts
src/app/create-account/: page.tsx
src/app/edit-book/: page.tsx
src/app/lib/: atoms.ts  booklist.ts  config.ts  openers.ts
src/app/styles/: book.module.css  createAccount.module.css  editBook.module.css  footer.module.css  globals.css  header.module.css  library.module.css  page.module.css  signup.module.css
