[package]
name = "book-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A collection of API functions for getting manga/manhua/manhwa from AniList as well as volumes from Google Books"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
